QuitPlan fix 2, added admin crud api, fix mapping data, plan status